[metadata]
name = bpfmaps
version = 0.0.1
author = Peter Stolz
author_email = 50801264+PeterStolz@users.noreply.github.com
description = Python wrapper of libbpf to interact with bpf maps
long_description = file: README.md
long_description_content_type = text/markdown
keywords = eBPF, bpfmaps, libbpf
platforms = linux
url = https://github.com/PeterStolz/pybpfmaps
project_urls =
    Bug Tracker = https://github.com/PeterStolz/pybpfmaps/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Natural Language :: English
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
